<resources>
    <string name="app_name">SAM</string>
    <!-- LoginActivity -->
    <string name="usuario">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="text_cadastro">Cadastro</string>
    <string name="text_dados">Aqui todo o aprendizado do seu filho é registrado! Faça login para acessar</string>
    <string name="text_welcome">Bem vindo ao Sam! O aplicativo educativo que vai auxiliar o desenvolvimento do seu filho. Nele você encontra jogos, que estimularão diversas áreas do conhecimento, e conteúdos educativos. Faça login para ter acesso aos dados coletados durante os jogos e acompanhe o desenvovimento do seu pequeno.</string>
    <string name="text_home">Aprender brincando é divertido</string>
    <string name="text_popup">A equipe de desenvolvimento recomenda a supervisão de um adulto ou responsável durante o uso do aplicativo.</string>

    <string name="main2_text">Educação não transforma o mundo. Educação muda as pessoas. Pessoas transformam o mundo.</string>

    <!-- Bottom Nav -->
    <string name="title_home">Menu</string>
    <string name="title_notifications">Instruções</string>
    <string name="title_category">Responsáveis</string>
    <string name="title_profile">Sobre</string>
    <string name="motora1">As habilidades motoras são controladas pelo sistema nervoso central, tanto a coordenação ampla, que permite à criança realizar qualquer atividade relacionada ao impulso físico e ao equilíbrio, quanto a fina, que é a habilidade de usar de forma precisa pequenos músculos localizados principalmente nas mãos e pés, para movimentos mais delicados e precisos que permite o manuseio de objetos e realizar capacidades como recortar, pintar, escrever, etc.
        As crianças com autismo podem ter diferentes graus de dificuldade nas habilidades motoras e podem ter efeitos no desenvolvimento cognitivo, social e emocional. Isso porque habilidades, como sentar-se, pegar objetos e andar, permitem aprender novas experiências que estimulam o aprendizado, essas dificuldades podem fazer com que as crianças com autismo evitem se envolver em atividades físicas, limitando suas oportunidades de interação social. No entanto, todas elas podem ser superadas, principalmente se detectadas cedo.</string>
    <string name="sobre">As crianças com autismo podem ter diferentes graus de dificuldade nas habilidades motoras e elas podem ter efeitos no desenvolvimento cognitivo, social e emocional das crianças com autismo. Isso porque habilidades, como sentar-se, pegar objetos e andar, permitem aprender novas experiências que estimulam o aprendizado. Além disso, bebês que não se movem muito ou não agarram objetos tendem a ter menos interações com seus cuidadores, limitando as oportunidades de desenvolver a linguagem e outras habilidades. Todas essas dificuldades na coordenação motora podem fazer com que as crianças com autismo evitem se envolver em atividades físicas, como esportes, limitando suas oportunidades de interação social. No entanto, todas elas podem ser superadas, principalmente se detectadas precocemente.</string>
    <string name="sobre_sam1">Inspirado no artigo escrito por Cristiano Camargo e postado no GAUT, Galeria de Arte por Pessoas com Autismo, nosso mascote de escolha é Sam, a gata laranja</string>
    <string name="sobre_sam2">No seu artigo, Cristiano diz que a peça de quebra cabeça azul foi escolhida sem a consulta da comunidade autista. O GAUT elencou o vermelho e o gato como seus representantes.</string>

    <string name="mais">Aprender sobre animais</string>

    <string name="game1_name">SamAdivinha</string>

    <string name="game2_name">Quebra-Cabeça</string>
    <string name="game2_sobre">O quebra-cabeça reforça as conexões existentes do cérebro e incentiva a formação de novas ligações. Ele estimula tanto o lado esquerdo do cérebro, com a lógica e racionalidade através do encaixe das peças, quanto o lado direito, com a criatividade e a visão artística da obra final, ou seja, incentiva diretamente as habilidades cognitivas.</string>

    <string name="game3_name">SamCome</string>
    <string name="game3_sobre">O Samcome, através da sua dinâmica, além da coordenação motora, ajuda a estimular outras áreas, como percepção visual, habilidades psicomotoras, atenção e velocidade de processamento, pois é preciso clicar na tela apenas quando o Sam estiver alinhado para comer os peixinhos.</string>

    <string name="game4_name">Conversando com Sam</string>

    <string name="proximo">Próximo</string>

    <string name="sapo">Sapo</string>
    <string name="urso">Urso</string>
    <string name="abelha">Abelha</string>
    <string name="cavalo">Cavalo</string>
    <string name="vaca">Vaca</string>
    <string name="doninha">Doninha</string>
    <string name="cachorro">Cachorro</string>
    <string name="ovelha">Ovelha</string>
    <string name="bode">Bode</string>
    <string name="passarinho">Passarinho</string>
    <string name="jacare">Jacaré</string>
    <string name="galinha">Galinha</string>
    <string name="dinossauro">Dinossauro</string>
    <string name="cobra">Cobra</string>
    <string name="tigre">Tigre</string>
    <string name="elefante">Elefante</string>
    <string name="golfinho">Golfinho</string>
    <string name="camelo">Camelo</string>
    <string name="onca">Onça</string>
    <string name="quero_quero">Quero-Quero</string>
    <string name="unicornio">Unicórnio</string>
    <string name="girafa">Girafa</string>
    <string name="tartaruga">Tartaruga</string>
    <string name="coruja">Coruja</string>
    <string name="rinoceronte">Rinoceronte</string>
    <string name="rato">Rato</string>
    <string name="leao">Leão</string>
    <string name="foca">Foca</string>
    <string name="besouro">Besouro</string>
    <string name="hamster">Hamster</string>
    <string name="urubu">Urubu</string>
    <string name="macaco">Macaco</string>

    <string name="appTutorialTitle1">Bem vindo ao Sam,</string>
    <string name="appTutorialInfo1"> seu aplicativo de aprendizado criado para auxiliar o aprendizado de crianças autistas. Eu, Sam, vou te ensinar a como usar o nosso aplicativo. Aqui em baixo você pode acessar as abas com os jogos, aconselhamento para os pais, informações sobre mim, Sam, além dessa mesma página.</string>
    <string name="appTutorialTitle2"></string>
    <string name="appTutorialInfo2">Na página com os jogos, é possível encontrar as páginas sobre as nossas quatro áreas de metodologia e os nossos jogos.</string>
    <string name="appTutorialTitle3"></string>
    <string name="appTutorialInfo3">Nesses quatro botões pequenos na página de jogos, você pode encontrar as lições de aprendizado sobre as quatro áreas, com pequenas dinâmicas.</string>

    <string name="aprenderAnimaisTitleInfo1">Uma lista de animais está a espera para conhecer você!</string>
    <string name="aprenderAnimaisInfo1">A partir daqui, você conhecerá animais incríveis e seus sons, além de
    conhecer um pouco mais sobre eles e sobre o lugar onde vivem</string>
    <string name="aprenderAnimaisTitleInfo2">Aumente o som!</string>
    <string name="aprenderAnimaisInfo2">Ao clicar na imagem do animal, o som dele é emitido, facilitando o reconhecimento do mesmo</string>
    <string name="aprenderAnimaisTitleInfo3">Parabéns!</string>
    <string name="aprenderAnimaisInfo3">Você completou o tutorial, ao clicar em avançar, a tela de aprendizado será acessada</string>

    <string name="alfabeto">A alfabetização é a base para uma educação construtiva, o qual ajuda as pessoas a desenvolver a leitura, a escrita, a comunicação, as ideias e os pensamentos, o letramento utiliza a escrita para resolver problemas do dia a dia, facilitando assim suas práticas sociais podendo produzir gêneros textuais.</string>
    <string name="logica">O raciocínio lógico é essencial para toda criança, pois ajuda a conquistar melhores rendimentos no processo de ensino e aprendizagem como um todo. A competência é bastante útil para a reflexão e tomada de decisão na vida adulta, tornando o pequeno mais consciente da realidade e do mundo que o cerca.</string>
    <string name="motor">O desenvolvimento motor é fundamental em nossas ações cotidianas, é o que nos permite locomover e realizar ações que fazem parte da nossa rotina. As habilidades motoras são o que permite à criança correr, brincar, pular e realizar qualquer atividade relacionada ao impulso físico e ao equilíbrio.</string>
    <string name="social">A interação social traz benefícios para a criança como a troca de linguagens, experiências e culturas; e a criação de princípios e valores como o respeito, a generosidade e a colaboração. E vida em sociedade é importante não apenas para construção de conhecimentos, mas também para o desenvolvimento individual de cada um.</string>

    <string name="soletrandoAbelha">A - B - E - L - H - A</string>
    <string name="descAbelha">Abelhas são insetos voadores, conhecidos pelo seu importante papel na polinização</string>
    <string name="vidaAbelha">1 a 2 meses</string>
    <string name="habitatAbelha">Fazem as colmeias no topo de árvores, cavernas, parte interna de telhados entre outros</string>

    <string name="soletrandoBode">B - O - D - E</string>
    <string name="descBode">São que tem a sua pele os protege das baixas temperaturas e de predadores</string>
    <string name="vidaBode">15 a 18 anos</string>
    <string name="habitatBode">Vivem nas montanhas, com temperaturas baixas</string>

    <string name="soletrandoCachorro">C - A - C - H - O - R - R - O</string>
    <string name="descCachorro">É um mamífero com dentes afiados, excelente faro e boa audição. Cada uma de suas quatro pernas termina em um pé, ou pata, com cinco dedos. Cada dedo tem base macia e unha. Uma cobertura de pelos mantém o cão aquecido. Ele se refresca colocando a língua para fora da boca.
        Foi um dos primeiros bichos a serem domesticados e treinados para conviver com as pessoas.</string>
    <string name="vidaCachorro">10 - 13 anos</string>
    <string name="habitatCachorro">Estão por todo o mundo, as pessoas têm cães como bichos de estimação, animais de guarda ou de trabalho. Alguns cães não convivem com os seres humanos e estão soltos na natureza, em alguns lugares do mundo.</string>

    <string name="textoManutencao">Esta página está em processo de desenvolvimento, aproveite as outras abas do aplicativo e até a próxima</string>

</resources>

