<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questao3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:gravity="center"
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/minkynice"
                android:text="QUAL É O ANIMAL?"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_gravity="center"
                android:id="@+id/cachorro"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:layout_marginTop="20dp"
                android:onClick="playAbelha"
                android:src="@drawable/abelha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo" />

            <TextView
                android:gravity="center"
                android:fontFamily="@font/letters_learners"
                android:textSize="25sp"
                android:id="@+id/titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Clique para ouvir"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cachorro" />

            <Button
                android:id="@+id/errado"
                android:fontFamily="@font/minkynice"
                android:layout_width="233dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/errado"
                android:onClick="errado3"
                android:text="@string/bode"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errado2" />

            <Button
                android:id="@+id/errado3"
                android:fontFamily="@font/minkynice"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/errado"
                android:onClick="errado3"
                android:text="@string/passarinho"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/certo" />

            <Button
                android:id="@+id/errado1"
                android:fontFamily="@font/minkynice"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/errado"
                android:onClick="errado3"
                android:text="@string/jacare"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo2" />

            <Button
                android:id="@+id/certo"
                android:fontFamily="@font/minkynice"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/certo"
                android:onClick="certo3"
                android:text="@string/abelha"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errado1"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>