<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".CachorroLearn">

    <ImageView
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/round_right"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/view5"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <ImageView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/round_left"
        android:tint="@color/green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:fontFamily="@font/minkynice"
        android:id="@+id/cachorro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="CACHORRO"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/cachorro"
        tools:layout_editor_absoluteX="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/descCachorro"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view5"
                tools:layout_editor_absoluteY="370dp" />

            <TextView
                android:fontFamily="@font/minkynice"
                android:id="@+id/textView4"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Expectativa de vida"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="50dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vidaCachorro"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="50dp" />

            <TextView
                android:fontFamily="@font/minkynice"
                android:id="@+id/textView6"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Habitat"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="54dp" />

            <TextView

                android:id="@+id/textView7"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/habitatCachorro"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="53dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/barrinha"
        android:tint="@color/green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ball_radius"
        android:onClick="somCachorroLearn"
        android:padding="15dp"
        android:src="@drawable/ic_sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="335dp"
        android:layout_height="231dp"
        android:src="@drawable/cachorro"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:fontFamily="@font/minkynice"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="35dp"
        android:text="@string/soletrandoCachorro"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>